--- a/dashboard/dashboard.csproj
+++ b/dashboard/dashboard.csproj
@@ -110,6 +110,17 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TESToneDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TESToneDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ViewRoom.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewRoom.Designer.cs">
+      <DependentUpon>ViewRoom.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddDept.resx">
       <DependentUpon>AddDept.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,6 +158,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ViewRoom.resx">
+      <DependentUpon>ViewRoom.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -156,6 +170,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="TESToneDataSet.xsc">
+      <DependentUpon>TESToneDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TESToneDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TESToneDataSet.xss">
+      <DependentUpon>TESToneDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -195,6 +220,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ICONS\Add User Male_96px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Detective_96px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Search_100px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Edit_100px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
