--- a/dashboard/dashboard.csproj
+++ b/dashboard/dashboard.csproj
@@ -115,6 +115,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TESToneDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ViewDept.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewDept.Designer.cs">
+      <DependentUpon>ViewDept.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewRoom.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -158,6 +164,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ViewDept.resx">
+      <DependentUpon>ViewDept.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewRoom.resx">
       <DependentUpon>ViewRoom.cs</DependentUpon>
     </EmbeddedResource>
@@ -232,6 +241,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Edit_100px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Trash_96px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
