--- a/dashboard/dashboard.csproj
+++ b/dashboard/dashboard.csproj
@@ -115,17 +115,41 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TESToneDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ViewBatch.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewBatch.Designer.cs">
+      <DependentUpon>ViewBatch.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewDept.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ViewDept.Designer.cs">
       <DependentUpon>ViewDept.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewDuration.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewDuration.Designer.cs">
+      <DependentUpon>ViewDuration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewPlan.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewPlan.Designer.cs">
+      <DependentUpon>ViewPlan.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewRoom.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ViewRoom.Designer.cs">
       <DependentUpon>ViewRoom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewStudent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewStudent.Designer.cs">
+      <DependentUpon>ViewStudent.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AddDept.resx">
       <DependentUpon>AddDept.cs</DependentUpon>
@@ -164,11 +188,23 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ViewBatch.resx">
+      <DependentUpon>ViewBatch.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewDept.resx">
       <DependentUpon>ViewDept.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ViewDuration.resx">
+      <DependentUpon>ViewDuration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewPlan.resx">
+      <DependentUpon>ViewPlan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewRoom.resx">
       <DependentUpon>ViewRoom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewStudent.resx">
+      <DependentUpon>ViewStudent.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
