--- a/dashboard/dashboard.csproj
+++ b/dashboard/dashboard.csproj
@@ -281,5 +281,8 @@
   <ItemGroup>
     <None Include="Resources\Trash_96px.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eye_96px.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
