--- a/dashboard/dashboard.csproj
+++ b/dashboard/dashboard.csproj
@@ -123,6 +123,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TESToneDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="TESToneDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TESToneDataSet2.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ViewBatch.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -244,6 +249,17 @@
     </None>
     <None Include="TESToneDataSet1.xss">
       <DependentUpon>TESToneDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet2.xsc">
+      <DependentUpon>TESToneDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TESToneDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TESToneDataSet2.xss">
+      <DependentUpon>TESToneDataSet2.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
