--- a/dashboard/dashboard.csproj
+++ b/dashboard/dashboard.csproj
@@ -39,13 +39,20 @@
     <Reference Include="Bunifu_UI_v1.5.3">
       <HintPath>..\..\..\..\softy\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="ExcelLibrary">
       <HintPath>..\..\..\Module-1(Excel Import Export)\MTS1\ExcelLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -93,6 +100,12 @@
     <Compile Include="Duration.Designer.cs">
       <DependentUpon>Duration.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExamSchedule.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ExamSchedule.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="LoginSignUp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +113,18 @@
       <DependentUpon>LoginSignUp.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportForm.Designer.cs">
+      <DependentUpon>ReportForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SeatingArrangementcs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SeatingArrangementcs.Designer.cs">
+      <DependentUpon>SeatingArrangementcs.cs</DependentUpon>
+    </Compile>
     <Compile Include="tab1.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -127,6 +152,26 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TESToneDataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TESToneDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TESToneDataSet3.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TESToneDataSet4.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TESToneDataSet4.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TESToneDataSet5.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TESToneDataSet5.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TESToneDataSet6.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TESToneDataSet6.xsd</DependentUpon>
     </Compile>
     <Compile Include="ViewBatch.cs">
       <SubType>UserControl</SubType>
@@ -182,8 +227,18 @@
     <EmbeddedResource Include="Duration.resx">
       <DependentUpon>Duration.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ExamSchedule.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ExamSchedule.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginSignUp.resx">
       <DependentUpon>LoginSignUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm.resx">
+      <DependentUpon>ReportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SeatingArrangementcs.resx">
+      <DependentUpon>SeatingArrangementcs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="tab1.resx">
       <DependentUpon>tab1.cs</DependentUpon>
@@ -261,6 +316,50 @@
     <None Include="TESToneDataSet2.xss">
       <DependentUpon>TESToneDataSet2.xsd</DependentUpon>
     </None>
+    <None Include="TESToneDataSet3.xsc">
+      <DependentUpon>TESToneDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TESToneDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TESToneDataSet3.xss">
+      <DependentUpon>TESToneDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet4.xsc">
+      <DependentUpon>TESToneDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet4.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TESToneDataSet4.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TESToneDataSet4.xss">
+      <DependentUpon>TESToneDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet5.xsc">
+      <DependentUpon>TESToneDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet5.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TESToneDataSet5.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TESToneDataSet5.xss">
+      <DependentUpon>TESToneDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet6.xsc">
+      <DependentUpon>TESToneDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TESToneDataSet6.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TESToneDataSet6.xss">
+      <DependentUpon>TESToneDataSet6.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -324,6 +423,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ICONS\Refresh_80px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
