--- a/dashboard/dashboard.csproj
+++ b/dashboard/dashboard.csproj
@@ -112,7 +112,6 @@
     <Compile Include="LoginSignUp.Designer.cs">
       <DependentUpon>LoginSignUp.cs</DependentUpon>
     </Compile>
-    <Compile Include="PlanVar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ReportForm.cs">
       <SubType>Form</SubType>
@@ -178,6 +177,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TESToneDataSet7.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TESToneDataSet8.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TESToneDataSet8.xsd</DependentUpon>
     </Compile>
     <Compile Include="ViewBatch.cs">
       <SubType>UserControl</SubType>
@@ -377,6 +381,17 @@
     </None>
     <None Include="TESToneDataSet7.xss">
       <DependentUpon>TESToneDataSet7.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet8.xsc">
+      <DependentUpon>TESToneDataSet8.xsd</DependentUpon>
+    </None>
+    <None Include="TESToneDataSet8.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TESToneDataSet8.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TESToneDataSet8.xss">
+      <DependentUpon>TESToneDataSet8.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
